syntax = "proto3";

package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;


message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

message LongGreetResquest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

message GreetEveryOneResquest {
    Greeting greeting = 1;
}

message GreetEveryOneResponse {
    string result = 1;
}

service GreetService {
    //Unary
    rpc Greet(GreetRequest) returns (GreetResponse) {};
//    rpc Foo(FooRequest) returns (FooResponse) {};

    //Server streaming
    rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

    //Client streaming
    rpc LongGreet(stream LongGreetResquest) returns (LongGreetResponse){};

    //Bi-Directional
    rpc GreetEveryOne(stream GreetEveryOneResquest) returns (stream GreetEveryOneResponse) {};
}